--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Додатковий урок</title>
+</head>
+<body>
+<h1>І ВСЕ БУДЕ ДОБРЕ</h1>
+<p>краи́на (укр. Україна [ukrɑˈjinɑ] Информация о файле слушать) — государство в Восточной и частично Центральной Европе. Население — 40 997 699 постоянных жителей и 41 167 336 человек наличного населения[13] (34-е место в мире)Перейти к разделу «#Численность, расселение». Общая площадь — 603 549 км² (44-е место в мире); крупнейшее по площади государство, целиком находящееся в Европе.Перейти к разделу «#Границы»</p>    
+<a href="https://ru.wikipedia.org/wiki/Украина" target="_blank">Википедия на україну</a>
 
+</body>
+</html>
